--- a/react_app/src/UTTT.css
+++ b/react_app/src/UTTT.css
@@ -53,6 +53,7 @@ div#container {
 div#slider {
 	position: relative;
 	top: 10vh;
+	width: 100vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
